Add new tests and cleanly separate unit from integration tests